Configure Twilio SIP trunk integration
- Updated pjsip.conf with Twilio PSTN termination URI (asterisk-pbx1.pstn.twilio.com)
- Configured authentication credentials for Twilio Elastic SIP Trunking
- Added Twilio IP ranges for inbound call identification
- Set Caller ID to Twilio number (+17756187988) for outbound calls
- Updated extensions.conf with proper Caller ID for international calls
- Added Asterisk container to docker-compose.yml (optional, native Asterisk used)

Tested: Outbound calls to India (+91) working with audio

--- a/configs/extensions.conf
+++ b/configs/extensions.conf
@@ -63,12 +63,16 @@ exten => 300,1,NoOp(n8n Webhook Test)
 ; -----------------------------------------------------------------------------
 [outbound]
 ; Route outbound calls through SIP trunk
+; Twilio requires valid Caller ID (purchased number or verified)
 exten => _1NXXNXXXXXX,1,NoOp(Outbound call to ${EXTEN})
- same => n,Set(CALLERID(num)=YOUR_CALLER_ID)
- same => n,Dial(PJSIP/${EXTEN}@sip-trunk-endpoint,30,r)
+ same => n,Set(CALLERID(num)=+17756187988)
+ same => n,Set(CALLERID(name)=Asterisk PBX)
+ same => n,Dial(PJSIP/${EXTEN}@twilio-endpoint,30,r)
  same => n,Hangup()
 
 ; International calls (E.164 format)
 exten => _+X.,1,NoOp(International call to ${EXTEN})
- same => n,Dial(PJSIP/${EXTEN}@sip-trunk-endpoint,30,r)
+ same => n,Set(CALLERID(num)=+17756187988)
+ same => n,Set(CALLERID(name)=Asterisk PBX)
+ same => n,Dial(PJSIP/${EXTEN}@twilio-endpoint,30,r)
  same => n,Hangup()
