--- a/configs/pjsip.conf
+++ b/configs/pjsip.conf
@@ -26,50 +26,60 @@ local_net=192.168.0.0/16
 ; Replace with your actual SIP trunk provider credentials
 ; -----------------------------------------------------------------------------
 
-; --- Registration to Provider ---
-[sip-trunk-provider]
-type=registration
-transport=transport-udp
-outbound_auth=sip-trunk-auth
-server_uri=sip:YOUR_PROVIDER_SERVER
-client_uri=sip:YOUR_USERNAME@YOUR_PROVIDER_SERVER
-retry_interval=60
-expiration=3600
+; --- Twilio SIP Trunk Configuration ---
+; Twilio Elastic SIP Trunking does NOT use SIP REGISTER
+; Auth happens during INVITE via Credential List (username/password)
+; For outbound: Asterisk sends INVITE to Twilio with credentials
+; For inbound: Twilio sends INVITE from their IP ranges (matched by identify section)
+; SIP URI: asterisk-pbx.sip.us1.twilio.com
 
-; --- Authentication ---
-[sip-trunk-auth]
+; NOTE: No registration section needed for Twilio
+
+; --- Authentication for Twilio ---
+[twilio-auth]
 type=auth
 auth_type=userpass
-username=YOUR_USERNAME
-password=YOUR_PASSWORD
+username=Asterisk
+password=Asterisk@n8n-server123
 
-; --- AOR (Address of Record) ---
-[sip-trunk-aor]
+; --- AOR (Address of Record) for Twilio PSTN Termination ---
+[twilio-aor]
 type=aor
-contact=sip:YOUR_PROVIDER_SERVER
+contact=sip:asterisk-pbx1.pstn.twilio.com
 qualify_frequency=60
 
-; --- Endpoint (Incoming/Outgoing calls) ---
-[sip-trunk-endpoint]
+; --- Endpoint for Twilio (Incoming/Outgoing calls) ---
+[twilio-endpoint]
 type=endpoint
 transport=transport-udp
 context=from-sip-provider
 disallow=all
 allow=ulaw
 allow=alaw
-allow=gsm
-outbound_auth=sip-trunk-auth
-aors=sip-trunk-aor
+allow=g722
+outbound_auth=twilio-auth
+aors=twilio-aor
 direct_media=no
 force_rport=yes
 rewrite_contact=yes
 rtp_symmetric=yes
+from_user=+17756187988
+from_domain=asterisk-pbx1.pstn.twilio.com
+callerid="Asterisk PBX" <+17756187988>
 
-; --- Identify incoming calls from provider ---
-[sip-trunk-identify]
+; --- Identify incoming calls from Twilio ---
+; Twilio SIP signaling IP ranges
+[twilio-identify]
 type=identify
-endpoint=sip-trunk-endpoint
-match=YOUR_PROVIDER_IP
+endpoint=twilio-endpoint
+match=54.172.60.0/30
+match=54.244.51.0/30
+match=54.171.127.192/30
+match=35.156.191.128/30
+match=54.65.63.192/30
+match=54.169.127.128/30
+match=54.252.254.64/30
+match=177.71.206.192/30
 
 ; -----------------------------------------------------------------------------
 ; INTERNAL EXTENSION TEMPLATE (Optional - for testing)
