Feat: Switch to Groq API for 4x faster responses
- Replaced Ollama with Groq API (FREE tier: 30 req/min)
- Reduced silence detection: 2s → 1s
- Using llama-3.3-70b-versatile model
- Response time improved from ~8s to ~2s

--- a/configs/extensions.conf
+++ b/configs/extensions.conf
@@ -102,8 +102,8 @@ exten => s,1,Answer()
  ; Generate unique filename for this turn
  same => n,Set(REC_FILE=/var/lib/asterisk/sounds/custom/rec-${UNIQUEID}-${EPOCH})
  
- ; Record: filename, format(wav), silence-detect(2s), max-dur(10s)
- same => n,Record(${REC_FILE}.wav,2,10)
+ ; Record: filename, silence-detect(1s for fast response), max-dur(8s)
+ same => n,Record(${REC_FILE}.wav,1,8)
  
  ; Check if recording exists/is valid (Record app moves to next prio on silence/hash)
  same => n,NoOp(Input Recorded: ${REC_FILE}.wav)
