--- a/configs/ai.env
+++ b/configs/ai.env
@@ -1,48 +1,31 @@
 # =============================================================================
 # AI Assistant Configuration for Asterisk
 # =============================================================================
-# This file is sourced by the AGI script to customize AI behavior
-# Copy to /etc/asterisk/ai.env and modify as needed
-# =============================================================================
 
 # ---------------------------------------------------------------------------
-# AI PERSONALITY - Customize your assistant!
+# GROQ API (Required for fast responses)
+# Get your FREE API key at: https://console.groq.com/keys
 # ---------------------------------------------------------------------------
+GROQ_API_KEY="YOUR_GROQ_API_KEY_HERE"
 
-# Name of your AI assistant
+# ---------------------------------------------------------------------------
+# AI PERSONALITY
+# ---------------------------------------------------------------------------
 AI_NAME="Alex"
-
-# System prompt - defines the AI's personality and behavior
-AI_SYSTEM_PROMPT="You are a friendly and helpful AI phone assistant named Alex. You work for a customer service department. Keep your responses brief (under 50 words) and conversational. Be warm, professional, and helpful. If you don't know something, admit it politely."
-
-# Welcome message when call starts
-AI_WELCOME_MESSAGE="Hello! I'm Alex, your AI assistant. How can I help you today?"
-
-# Goodbye message when call ends
+AI_SYSTEM_PROMPT="You are a friendly AI phone assistant named Alex. Keep responses brief (under 30 words) and conversational. Be warm and professional."
+AI_WELCOME_MESSAGE="Hello! I am Alex, your AI assistant. How can I help you today?"
 AI_GOODBYE_MESSAGE="Thank you for calling! Have a wonderful day. Goodbye!"
-
-# Message when speech is not understood
-AI_FALLBACK_MESSAGE="I'm sorry, I didn't quite catch that. Could you please repeat?"
+AI_FALLBACK_MESSAGE="I am sorry, I did not quite catch that. Could you please repeat?"
 
 # ---------------------------------------------------------------------------
-# SERVICE CONFIGURATION
+# MODEL SETTINGS
 # ---------------------------------------------------------------------------
+# Groq models (fast): llama-3.3-70b-versatile, llama-3.1-8b-instant, mixtral-8x7b-32768
+LLM_MODEL="llama-3.3-70b-versatile"
+LLM_MAX_TOKENS="80"
 
-# LLM Model (smaller = faster, larger = smarter)
-LLM_MODEL="llama3.2:1b"
-
-# Maximum tokens for AI response
-LLM_MAX_TOKENS="100"
-
-# Whisper model (tiny, base, small, medium)
-WHISPER_MODEL="base"
+# Whisper model: tiny (fastest), base, small (most accurate)
+WHISPER_MODEL="tiny"
 
 # TTS Voice
 TTS_VOICE="alloy"
-
-# ---------------------------------------------------------------------------
-# SERVICE URLs (usually don't need to change)
-# ---------------------------------------------------------------------------
-STT_SERVICE_URL="http://localhost:5051/transcribe"
-LLM_SERVICE_URL="http://localhost:11434/api/generate"
-TTS_SERVICE_URL="http://localhost:5050/v1/audio/speech"
