Feat: n8n AI Agent integration with tool access
- Modified AGI script to call n8n webhook instead of Groq
- Created n8n-phone-agent-workflow.json with AI Agent + tools
- Supports Gmail, Google Calendar integration
- Added N8N_WEBHOOK_URL configuration

--- a/configs/ai.env
+++ b/configs/ai.env
@@ -3,29 +3,27 @@
 # =============================================================================
 
 # ---------------------------------------------------------------------------
-# GROQ API (Required for fast responses)
-# Get your FREE API key at: https://console.groq.com/keys
+# n8n AI Agent (PRIMARY - with tool access)
 # ---------------------------------------------------------------------------
-GROQ_API_KEY="YOUR_GROQ_API_KEY_HERE"
+N8N_WEBHOOK_URL="https://n8n.shravanpandala.me/webhook/phone-agent"
 
 # ---------------------------------------------------------------------------
 # AI PERSONALITY
 # ---------------------------------------------------------------------------
 AI_NAME="Alex"
-AI_SYSTEM_PROMPT="You are a friendly AI phone assistant named Alex. Keep responses brief (under 30 words) and conversational. Be warm and professional."
-AI_WELCOME_MESSAGE="Hello! I am Alex, your AI assistant. How can I help you today?"
+AI_SYSTEM_PROMPT="You are a friendly AI phone assistant named Alex. Keep responses brief."
+AI_WELCOME_MESSAGE="Hello! I am Alex, your AI assistant. I can check your emails, calendar, and more. How can I help?"
 AI_GOODBYE_MESSAGE="Thank you for calling! Have a wonderful day. Goodbye!"
-AI_FALLBACK_MESSAGE="I am sorry, I did not quite catch that. Could you please repeat?"
+AI_FALLBACK_MESSAGE="I'm sorry, I didn't quite catch that. Could you please repeat?"
 
 # ---------------------------------------------------------------------------
-# MODEL SETTINGS
+# FALLBACK: Groq API (used if n8n is unavailable)
 # ---------------------------------------------------------------------------
-# Groq models (fast): llama-3.3-70b-versatile, llama-3.1-8b-instant, mixtral-8x7b-32768
-LLM_MODEL="llama-3.3-70b-versatile"
+GROQ_API_KEY="YOUR_GROQ_API_KEY_HERE"
+LLM_MODEL="llama-3.1-8b-instant"
 LLM_MAX_TOKENS="80"
 
-# Whisper model: tiny (fastest), base, small (most accurate)
-WHISPER_MODEL="tiny"
-
-# TTS Voice
+# ---------------------------------------------------------------------------
+# OTHER SETTINGS
+# ---------------------------------------------------------------------------
 TTS_VOICE="alloy"
