--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
     networks:
       - telephony-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5051/health"]
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5051/health')"]
       interval: 30s
       timeout: 10s
       retries: 3
