Feat: Script-based calls with conversation callback
- API now requires 'script' parameter (text to narrate)
- Added 'callbackUrl' parameter for conversation callback
- AGI script records full conversation in JSON
- Conversation POSTed to callback URL when call ends
- Added h extension handler for proper cleanup

--- a/configs/extensions.conf
+++ b/configs/extensions.conf
@@ -120,6 +120,10 @@ exten => s,1,Answer()
  ; Loop back to record again
  same => n,Goto(record_loop)
 
- same => n(hangup),Hangup()
+ same => n(hangup),AGI(agi-connector.sh,hangup)
+ same => n,Hangup()
 
+; Hangup handler - called when call ends for any reason
+exten => h,1,NoOp(Call ended - sending callback)
+ same => n,AGI(agi-connector.sh,hangup)
 
